# Nexusky

./: .gitignore  DESIGN.md  FEATURES.md  GUIDE.md  PRODUCT.md  README.md  electron-builder.yml  electron.vite.config.ts  package.json  pnpm-lock.yaml  skills-lock.json  test-e.js  tsconfig.base.json
.claude/: settings.json  settings.local.json
browser-extension/: background.js  manifest.json
docs/: 10K_VAULT_PERFORMANCE_REGRESSION.md  AI_PROVIDER_INTEGRATION_EXAMPLES.tsx  CODEX_TASK_AI_PROVIDER.md  CODEX_TASK_AI_PROVIDER_CHECKLIST.md  CODEX_TASK_AI_PROVIDER_IMPLEMENTATION.md  CODEX_TASK_AI_PROVIDER_SUMMARY.md  CODEX_TASK_SETTINGS_BACKEND.md  COGNITIVE_PARTNER_PLAN.md  DAILY_SUMMARY_2026-06-11.md  DAILY_SUMMARY_COMPLETE_2026-06-11.md  DAILY_SUMMARY_FINAL_2026-06-11.md  DESIGN.md  DEVELOPMENT_PLAN.md  FEATURES.md  FEATURE_PRUNING_PLAN_2026-05.md  GUIDE.md  IMPLEMENTATION_PLAN_2026-06.md  LONGCONTEXT_SETTINGS_IMPLEMENTATION.md  LONG_TERM_CONTEXT_SYSTEM_PLAN.md  MIGRATION_GUIDE.md  NEXUSKY_UPGRADE_SUMMARY.md  OPTIMIZATION.md  OPTIMIZATION_PLAN.md  P0-1_DEMO_COMPLETE.md  P0-2_VITALITY_COMPLETE.md  P0_FIX_TICKETS_2026-05.md  P0_IMPLEMENTATION_REPORT_2026-06-11.md  P0_UI_COMPLETE_REPORT.md  PLAN.md  PLUGIN_COMMANDS.md  PRODUCT.md  PRODUCT_ALIGNMENT_AUDIT_2026-06-04.md  PRODUCT_ALIGNMENT_HIGHLIGHTS_2026-06-04.md  PRODUCT_ROADMAP.md  (+23 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  commands.rs  db.rs  files.rs  global_shortcut.rs  lib.rs  main.rs  support.rs  vault.rs  watcher.rs  window_state.rs
(+201 files in other folders)
