[package]
name = "nexusky"
version = "0.3.7"
description = "AI-powered knowledge base note-taking app"
authors = ["Nexusky"]
license = "MIT"
repository = "https://github.com/wobushiyoushen0214/Nexusky"
edition = "2021"

[lib]
name = "nexusky_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
md5 = "0.7"
regex = "1"
rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
walkdir = "2"
